update gzit info

--- a/src/main/resources/latke.properties
+++ b/src/main/resources/latke.properties
@@ -24,10 +24,10 @@
 # Browser visit protocol
 serverScheme=http
 # Browser visit domain name
-serverHost=localhost
+serverHost=gzit.info
 # Browser visit port, 80 as usual, THIS IS NOT SERVER LISTEN PORT!
-serverPort=8080
+serverPort=80
 
-#### Runtime Mode ####
+#### Runtime Mode, must be development ####
 runtimeMode=DEVELOPMENT
 #runtimeMode=PRODUCTION
