--- a/src/main/resources/latke.properties
+++ b/src/main/resources/latke.properties
@@ -24,9 +24,14 @@
 # Browser visit protocol
 serverScheme=http
 # Browser visit domain name
-serverHost=gzit.info
+#serverHost=gzit.info
+serverHost=localhost
 # Browser visit port, 80 as usual, THIS IS NOT SERVER LISTEN PORT!
-serverPort=80
+serverPort=8084
+
+staticServerScheme=http
+staticServerHost=localhost
+staticServerPort=8084
 
 #### Runtime Mode, must be development ####
 runtimeMode=DEVELOPMENT
