--- a/src/main/resources/symphony.properties
+++ b/src/main/resources/symphony.properties
@@ -111,7 +111,7 @@ qiniu.secretKey=7YO_Iz0vZklV0Z7xIBETyaF199_DI8qNo4wFu3sd
 qiniu.domain=http://7xjz0r.com1.z0.glb.clouddn.com
 qiniu.bucket=symphony-dev
 
-upload.img.maxSize=1048576
+upload.img.maxSize=104857600
 upload.file.maxSize=10485760
 upload.dir=./upload/
 
@@ -157,7 +157,7 @@ activitYesterdayLivenessReward.maxPoint=300
 
 #### SendCloud Mail ####
 sendcloud.apiUser=changmingY_test_1v1iFk
-sendcloud.apiKey=9rUSV6jbd2LgmiPR
+sendcloud.apiKey=N8CWxbsx1bBvcFmK
 sendcloud.from=admin@gzit.info
 
 #### Baidu ####
@@ -185,14 +185,14 @@ algolia.adminKey=0ab0a9997eb6e6cbccaa1b9229b6ddbe
 algolia.index=pro_gzit_index
 
 #### Turing Robot ####
-turing.enabled=true
+turing.enabled=false
 turing.api=http://www.tuling123.com/openapi/api
 turing.key=2f53be65e323ec8e8b8ccbf42ee7ddc1
 turing.name=V
 turing.avatar=http://7xjz0r.com1.z0.glb.clouddn.com/robot_avatar.jpg
 
 #### XiaoV ####
-xiaov.enabled=true
+xiaov.enabled=false
 xiaov.api=http://hpxiaov.tunnel.qydev.com
 xiaov.key=dev_key
 
@@ -201,7 +201,7 @@ reservedTags=\u7CFB\u7EDF\u516C\u544A,\u56DE\u6536\u7AD9,B3log\u516C\u544A,B3log
 reservedUserNames=admin,participants,all,Bot,someone
 
 #### White list ####
-whiteListTags=phpMyAdmin,JavaScript,Elasticsearch,CoffeeScript
+whiteListTags=phpMyAdmin,JavaScrLocalURLFetchService:71]: Fetch async, request=[org.b3log.latke.urlfetch.HTTPRequest@7e99979[ipt,Elasticsearch,CoffeeScript
 
 #### WebSocket Scheme ####
 websocket.scheme=ws
