--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -25,9 +25,10 @@ runtimeDatabase=MYSQL
 
 #### JDBC database Configurations ####
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.URL=jdbc:mysql://localhost:3306/b3log_symphony?useUnicode=yes&characterEncoding=utf8
+jdbc.URL=jdbc:mysql://localhost:3306/gzit?useUnicode=yes&characterEncoding=utf8
 jdbc.username=root
-jdbc.password=1qaz@WSX3edc$RFV
+#jdbc.password=qiansipai
+jdbc.password=
 # database connection pool
 jdbc.pool=druid
 # The specific table name prefix
