--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -20,16 +20,16 @@
 # Author: Liang Ding
 #
 
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=DEBUG, stdout
 log4j.appender.stdout.Encoding=UTF-8
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%-5p]-[%d{yyyy-MM-dd HH:mm:ss}]-[%c:%L]: %m%n
 
-log4j.logger.org.b3log.symphony=INFO
+log4j.logger.org.b3log.symphony=DEBUG
 
-log4j.logger.org.b3log.latke=WARN
-log4j.logger.org.b3log.latke.repository.jdbc.util=WARN
+log4j.logger.org.b3log.latke=DEBUG
+log4j.logger.org.b3log.latke.repository.jdbc.util=DEBUG
 
 log4j.logger.com.scienjus.smartqq=WARN
