--- a/src/main/resources/latke.properties
+++ b/src/main/resources/latke.properties
@@ -24,13 +24,13 @@
 # Browser visit protocol
 serverScheme=http
 # Browser visit domain name
-#serverHost=gzit.info
-serverHost=localhost
+#serverHost=vns.ink
+serverHost=139.159.254.158
 # Browser visit port, 80 as usual, THIS IS NOT SERVER LISTEN PORT!
 serverPort=8084
 
 staticServerScheme=http
-staticServerHost=localhost
+staticServerHost=139.159.254.158
 staticServerPort=8084
 
 #### Runtime Mode, must be development ####
