--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -25,10 +25,10 @@ runtimeDatabase=MYSQL
 
 #### JDBC database Configurations ####
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.URL=jdbc:mysql://localhost:3306/gzit?useUnicode=yes&characterEncoding=utf8
+jdbc.URL=jdbc:mysql://139.159.254.158:3306/vns_ink?useUnicode=yes&characterEncoding=utf8
 jdbc.username=root
 #jdbc.password=qiansipai
-jdbc.password=
+jdbc.password=1qaz@WSX3edc$RFV
 # database connection pool
 jdbc.pool=druid
 # The specific table name prefix
