--- a/src/main/resources/latke.properties
+++ b/src/main/resources/latke.properties
@@ -24,14 +24,14 @@
 # Browser visit protocol
 serverScheme=http
 # Browser visit domain name
-#serverHost=vns.ink
-serverHost=139.159.254.158
+serverHost=vns.ink
+#serverHost=139.159.254.158
 # Browser visit port, 80 as usual, THIS IS NOT SERVER LISTEN PORT!
-serverPort=8084
+serverPort=80
 
 staticServerScheme=http
-staticServerHost=139.159.254.158
-staticServerPort=8084
+staticServerHost=vns.ink
+staticServerPort=80
 
 #### Runtime Mode, must be development ####
 runtimeMode=DEVELOPMENT
