--- a/src/main/resources/init.properties
+++ b/src/main/resources/init.properties
@@ -24,6 +24,6 @@ admin.name=admin
 admin.password=admin
 admin.email=neocode@126.com
 
-helloWorld.title=Sym \u793e\u533a\u4e0a\u7ebf &hearts;
-helloWorld.tags=Sym,\u7cfb\u7edf\u516c\u544a
-helloWorld.content=\u6b22\u8fce\u5927\u5bb6\u6765\u5230 Sym \u793e\u533a\uff01
+helloWorld.title=Venus\u793E\u533A\u4E0A\u7EBF &hearts;
+helloWorld.tags=Sym,\u7CFB\u7EDF\u516C\u544A
+helloWorld.content=\u6B22\u8FCE\u5927\u5BB6\u6765\u5230 Venus \u793E\u533A\uFF01
