--- a/src/main/resources/symphony.properties
+++ b/src/main/resources/symphony.properties
@@ -213,7 +213,7 @@ cache.articleCnt=128
 perfromance.threshold=300
 
 #### Icon ####
-icon.logo=<a href="${servePath}" alt="\u8D35\u5DDEIT" title="\u8D35\u5DDEIT" class="fn-pointer">\n\
+icon.logo=<a href="${servePath}" alt="Venus\u793E\u533A" title="Venus\u793E\u533A" class="fn-pointer">\n\
                     <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="48px" height="48px" viewBox="0 0 300.000000 300.000000">\n\
                         <g transform="translate(0.000000,300.000000) scale(0.100000,-0.100000)" fill="#484848" stroke="none">\n\
                             <path d="M1893 2282 c-106 -106 -286 -412 -387 -658 l-37 -91 -76 -11 c-42 -7\n\
