--- a/src/main/resources/symphony.properties
+++ b/src/main/resources/symphony.properties
@@ -98,7 +98,7 @@ chatRoom.msgCnt=40
 skinDirName=classic
 
 #### Default User Avatar ####
-defaultThumbnailURL=http://7xjz0r.com1.z0.glb.clouddn.com/user-thumbnail.png
+defaultThumbnailURL=http://vns.ink/images/user-thumbnail.png
 
 #### Stie Visit Statistic Code ####
 siteVisitStatCode=
