--- a/src/main/resources/symphony.properties
+++ b/src/main/resources/symphony.properties
@@ -158,7 +158,7 @@ activitYesterdayLivenessReward.maxPoint=300
 #### SendCloud Mail ####
 sendcloud.apiUser=changmingY_test_1v1iFk
 sendcloud.apiKey=N8CWxbsx1bBvcFmK
-sendcloud.from=admin@gzit.info
+sendcloud.from=admin@vns.ink
 
 #### Baidu ####
 baidu.lbs.ak=
@@ -174,11 +174,11 @@ geetest.id=b46d1900d0a894591916ea94ea91bd2c
 geetest.key=36fc3fe98530eea08dfc6ce76e3d24c4
 
 #### Elasticsearch ####
-es.enabled=false
+es.enabled=true
 es.server=http://localhost:9200
 
 #### Algolia ####
-algolia.enabled=true
+algolia.enabled=false
 algolia.appId=PPAA3D1B2X
 algolia.searchKey=0c57c670f3a2909d0fc1afbdb954bf9b
 algolia.adminKey=0ab0a9997eb6e6cbccaa1b9229b6ddbe
