do update vns to gzit

--- a/src/main/resources/init.properties
+++ b/src/main/resources/init.properties
@@ -24,6 +24,6 @@ admin.name=admin
 admin.password=admin
 admin.email=neocode@126.com
 
-helloWorld.title=Venus\u793E\u533A\u4E0A\u7EBF &hearts;
+helloWorld.title=\u8D35\u5DDEIT\u793E\u533A\u4E0A\u7EBF &hearts;
 helloWorld.tags=Sym,\u7CFB\u7EDF\u516C\u544A
-helloWorld.content=\u6B22\u8FCE\u5927\u5BB6\u6765\u5230 Venus \u793E\u533A\uFF01
+helloWorld.content=\u6B22\u8FCE\u5927\u5BB6\u6765\u5230 \u8D35\u5DDEIT \u793E\u533A\uFF01
