--- a/src/main/resources/latke.properties
+++ b/src/main/resources/latke.properties
@@ -24,13 +24,12 @@
 # Browser visit protocol
 serverScheme=http
 # Browser visit domain name
-#serverHost=vns.ink
-serverHost=vns.ink
+serverHost=gzit.info
 # Browser visit port, 80 as usual, THIS IS NOT SERVER LISTEN PORT!
 serverPort=80
 
 staticServerScheme=http
-staticServerHost=vns.ink
+staticServerHost=gzit.info
 staticServerPort=80
 
 #### Runtime Mode, must be development ####
