--- a/src/main/resources/symphony.properties
+++ b/src/main/resources/symphony.properties
@@ -98,7 +98,7 @@ chatRoom.msgCnt=40
 skinDirName=classic
 
 #### Default User Avatar ####
-defaultThumbnailURL=http://vns.ink/images/user-thumbnail.png
+defaultThumbnailURL=http://gzit.info/images/user-thumbnail.png
 
 #### Stie Visit Statistic Code ####
 siteVisitStatCode=
@@ -158,7 +158,7 @@ activitYesterdayLivenessReward.maxPoint=300
 #### SendCloud Mail ####
 sendcloud.apiUser=changmingY_test_1v1iFk
 sendcloud.apiKey=N8CWxbsx1bBvcFmK
-sendcloud.from=admin@vns.ink
+sendcloud.from=admin@gzit.info
 
 #### Baidu ####
 baidu.lbs.ak=
