--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -20,7 +20,7 @@
 # Author: Liang Ding
 #
 
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=INFO, stdout
 log4j.appender.stdout.Encoding=UTF-8
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
